Refactored some methods and variables and removed some unused imports