@@ -6,12 +6,11 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 public class SecurityUser implements UserDetails {
 
-    private final User user;
+    private final transient User user;
 
     @Override
     public String getUsername() {
@@ -27,7 +26,7 @@ public class SecurityUser implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return user.getRoles().stream()
                 .map(SecurityRole::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
